[package]
name = "qfdrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0-beta.0"
rustms = { git = "https://github.com/theGreatHerrLebert/rustims.git" }
# sage-core = {path = "../../sage/crates/sage" }
sage-core = { git = "https://github.com/theGreatHerrLebert/sage.git" }
itertools = "0.13.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
ndarray = "0.16.1"
rayon = "1.10.0"