[package]
name = "qfdrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0-beta.0"
rustms = { git = "https://github.com/theGreatHerrLebert/rustims.git" }
# rustms = { path = "../../rustims/rustms" }
# sage-core = {path = "../../sage/crates/sage" }
sage-core = { git = "https://github.com/theGreatHerrLebert/sage.git" }
itertools = "0.13.0"
serde = { version = "1.0.217", features = ["derive"] }
ndarray = "0.16.1"
rayon = "1.10.0"
bincode = "2.0.0-rc.3"
zstd = "0.13.2"
