[package]
name = "sagepy-connector"
version = "0.3.5"
edition = "2021"

[lib]
name = "sagepy_connector"
crate-type = ["cdylib"]

[dependencies]
# sage-core = {path = "../../sage/crates/sage" }
sage-core = { git = "https://github.com/theGreatHerrLebert/sage.git" }
qfdrust = { path  = "../qfdrust" }
unimod = { path = "../unimod" }
pyo3 = { version = "0.23.3", features = ["extension-module"] }
numpy = "0.23.0"
rayon = "1.10.0"

serde = { version = "1.0.217", features = ["derive"] }
bincode = "1.3.3"
log = "0.4.22"
itertools = "0.14.0"
serde_json = "1.0.135"
