[package]
name = "sagepy-connector"
version = "0.4.5"
edition = "2021"

[lib]
name = "sagepy_connector"
crate-type = ["cdylib"]

[dependencies]
sage-core = { git = "https://github.com/theGreatHerrLebert/sage.git", branch = "master" }
qfdrust = { path  = "../qfdrust" }
unimod = { path = "../unimod" }
mzdata = { version = "0.63.4", default-features = false, features = ["mzml", "mgf", "zlib-ng-compat"] }
pyo3 = { version = "0.27", features = ["extension-module"] }
numpy = "0.27"
rayon = "1.10.0"

serde = { version = "1.0.217", features = ["derive"] }
bincode = "1.3.3"
log = "0.4.22"
itertools = "0.14.0"
serde_json = "1.0.138"
parquet = { version = "50.0.0", default-features = false, features = ["zstd", "snap"] }
memmap2 = "0.9"
thiserror = "1.0"
timsrust = "0.4.2"
