[tool.poetry]
name = "sagepy"
version = "0.2.21"
description = ""
authors = ["theGreatHerrLebert <davidteschner@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pyteomics = ">=4.5.0"
sagepy-connector = ">=0.2.13"
numpy = "==1.26.4"
pandas = ">=1.3.3"
numba = ">=0.59.1"
sklearn = ">=1.5.1"
tqdm = ">=4.62.3"
lxml = ">=4.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
