[tool.poetry]
name = "sagepy"
version = "0.3.10"
description = ""
authors = ["theGreatHerrLebert <davidteschner@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pyteomics = ">=4.7.3"
mokapot = ">=0.10.0"
sagepy-connector = ">=0.3.10"
numpy = "==1.26.4"
pandas = ">=1.3.3"
numba = ">=0.59.1"
scikit-learn = ">=1.6.1"
tqdm = ">=4.62.3"
lxml = ">=5.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
