[tool.poetry]
name = "sagepy"
version = "0.4.4"
description = ""
authors = ["theGreatHerrLebert <davidteschner@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
sagepy-connector = ">=0.4.4"
numpy = ">=1.26,<3"
pandas = ">=1.3.3"
tqdm = ">=4.62.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
